Sizing tweaks to grouping feedback interface. Also bugfix for ordered items and cleaner expand/collapse for grouping.

--- a/themes/truefit/css/einetwork.css
+++ b/themes/truefit/css/einetwork.css
@@ -427,3 +427,5 @@ a.checkinLocDetail {cursor:pointer}
 .pseudoHover {color:#5c6dcc;text-decoration:underline;outline:0}
 
 .fadedFormat {opacity:0.33}
+a button.hideText,a.collapsed button.showText {display:inline-block}
+a.collapsed button.hideText,a button.showText {display:none}
